Fixed Game Titles not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -402,10 +402,6 @@ a.Anchor {
 		float: none;
 		margin-left: auto;
 		margin-right: auto;
-	
-	}
-	#PortfolioContent #GameJamList div h1 {
-		display: none;
 	}
 }
 
